# twitter-bot

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_story_category.py  0003_add_council_votes.py
scripts/: preview_council.py  preview_tweet.py  run_manual_cycle.py  seed_sources.py
src/newsbot/: composition.py  logging_config.py
src/newsbot/adapters/embeddings/: sentence_transformer_embedder.py
src/newsbot/adapters/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  groq_provider.py  openai_compatible_provider.py  openai_provider.py
src/newsbot/adapters/persistence/: article_repository.py  council_vote_repository.py  db.py  models_orm.py  rejection_repository.py  source_repository.py  story_repository.py  tweet_repository.py
src/newsbot/adapters/social/: dry_run_client.py  factory.py  x_client.py
src/newsbot/api/: deps.py  main.py  schemas.py
src/newsbot/application/: dto.py
src/newsbot/celery_app/: beat_schedule.py  celery.py
src/newsbot/config/: settings.py
src/newsbot/domain/: enums.py  models.py  value_objects.py
tests/fixtures/sample_feeds/: source_a.xml  source_b.xml
tests/integration/: fakes.py  test_pipeline_end_to_end.py  test_rss_ingestion.py
tests/unit/: test_confidence_calc.py  test_dedup_scoring.py  test_gating_service.py  test_groq_key_rotation.py  test_importance_scoring.py  test_ingestion_age_filter.py  test_pipeline_orchestrator_posting.py  test_story_council_service.py  test_tweet_formatting.py
(+23 files in other folders)
