[project]
name = "newsbot"
version = "0.1.0"
description = "Autonomous AI/tech news Twitter/X bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.13,<1.14",
    "pgvector>=0.3.6,<0.4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "celery[redis]>=5.4,<5.5",
    "redis>=5.2,<6",
    "feedparser>=6.0.11,<6.1",
    "httpx>=0.27,<0.28",
    "sentence-transformers>=3.2,<3.3",
    "anthropic>=0.39,<0.40",
    "openai>=1.54,<1.55",
    "tweepy>=4.14,<4.15",
    "structlog>=24.4,<25",
    "python-dateutil>=2.9,<3",
    "tenacity>=9.0,<10",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7",
    "respx>=0.21,<0.22",
    "freezegun>=1.5,<2",
    "factory-boy>=3.3,<4",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "aiosqlite>=0.20,<0.21",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
